<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="amountHint">Enter Amount Due</string>
    <string name="pax">Num of Pax</string>
    <string name="paxHint">Enter Number of Pax</string>
    <string name="noServiceCharge">NO SVS</string>
    <string name="gst"> GST</string>
    <string name="discount">Discount(%)</string>
    <string name="discountHint">Enter Discount Given</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
</resources>