<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"/>
    <EditText
        android:id="@+id/amountDue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/amountHint"
        android:digits="1234567890"
        android:inputType="number"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pax"/>
    <EditText
        android:id="@+id/paxNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/paxHint"
        android:digits="1234567890"
        android:inputType="number"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/noSVSEnabled"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textOff="@string/noServiceCharge"
            android:textOn="@string/noServiceCharge" />

        <ToggleButton
            android:id="@+id/gstEnabled"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textOff="@string/gst"
            android:textOn="@string/gst" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount"/>
    <EditText
        android:id="@+id/discountAmount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/discountHint"
        android:digits="1234567890"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/paymentCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <RadioButton
            android:id="@+id/paymentPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paynow"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/splitBill"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:text="@string/split"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/resetBill"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/splitMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>